# GenAlg_Knapsack

./: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  CKnapsackProblem.cpp  CKnapsackProblem.h  CMakeLists.txt  Knapsack.h  main.cpp
CMENU/: CCommand.h  CMenu.cpp  CMenu.h  KNPmenu.cpp  KNPmenu.h
